- Fixes null pointer error - Makes it so sdc student is updated after changes in calculateAdditionalStudentAttributes are finished